# stm32-bootloader

./: CMakeLists.txt  README.md
include/: crc32.h  flash.h  uart.h
linker/: STM32F411RE.ld
src/: crc32.c  flash.c  main.c  startup.c  uart.c
